TW_Core: Begin the core programming_CameraUI_Done
git-tfs-id: [https://twang006.visualstudio.com/]$/TW;C148

--- a/TW/TW_Core/camparamdialog.ui
+++ b/TW/TW_Core/camparamdialog.ui
@@ -448,7 +448,7 @@
   <customwidget>
    <class>FrameLabel</class>
    <extends>QLabel</extends>
-   <header>framelabel.h</header>
+   <header>FrameLabel.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
