--- a/TW/TW_Core/tw_coremainwindow.ui
+++ b/TW/TW_Core/tw_coremainwindow.ui
@@ -34,6 +34,7 @@
     <addaction name="actionOpen"/>
     <addaction name="actionCapture_From_Camra"/>
     <addaction name="actionDoubleCam"/>
+    <addaction name="action_Exit"/>
    </widget>
    <widget class="QMenu" name="menu_Edit">
     <property name="title">
@@ -245,10 +246,32 @@
     <string>Capture images from two cameras</string>
    </property>
   </action>
+  <action name="action_Exit">
+   <property name="text">
+    <string>&amp;Exit</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources>
   <include location="tw_coremainwindow.qrc"/>
  </resources>
- <connections/>
+ <connections>
+  <connection>
+   <sender>action_Exit</sender>
+   <signal>triggered()</signal>
+   <receiver>TW_CoreMainWindowClass</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>439</x>
+     <y>310</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>439</x>
+     <y>293</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
