--- a/TW/TW_Core/camparamdialog.ui
+++ b/TW/TW_Core/camparamdialog.ui
@@ -304,7 +304,7 @@
           </widget>
          </item>
          <item row="0" column="1">
-          <widget class="QLineEdit" name="lineEdit">
+          <widget class="QLineEdit" name="MarginX_lineEdit">
            <property name="text">
             <string>5</string>
            </property>
@@ -325,7 +325,7 @@
           </widget>
          </item>
          <item row="1" column="1">
-          <widget class="QLineEdit" name="lineEdit_2">
+          <widget class="QLineEdit" name="MarginY_lineEdit">
            <property name="text">
             <string>5</string>
            </property>
@@ -346,7 +346,7 @@
           </widget>
          </item>
          <item row="2" column="1">
-          <widget class="QLineEdit" name="lineEdit_3">
+          <widget class="QLineEdit" name="SubsetX_lineEdit">
            <property name="text">
             <string>16</string>
            </property>
@@ -367,7 +367,7 @@
           </widget>
          </item>
          <item row="3" column="1">
-          <widget class="QLineEdit" name="lineEdit_4">
+          <widget class="QLineEdit" name="SubsetY_lineEdit">
            <property name="text">
             <string>16</string>
            </property>
@@ -388,7 +388,7 @@
           </widget>
          </item>
          <item row="4" column="1">
-          <widget class="QLineEdit" name="lineEdit_5">
+          <widget class="QLineEdit" name="GridX_lineEdit">
            <property name="text">
             <string>3</string>
            </property>
@@ -409,7 +409,7 @@
           </widget>
          </item>
          <item row="5" column="1">
-          <widget class="QLineEdit" name="lineEdit_6">
+          <widget class="QLineEdit" name="GridY_lineEdit">
            <property name="text">
             <string>3</string>
            </property>
