--- a/TW/TW_Core/glwidget.ui
+++ b/TW/TW_Core/glwidget.ui
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>GLCanvas</class>
- <widget class="QOpenGLWidget" name="GLCanvas">
+ <class>GLWidget</class>
+ <widget class="QOpenGLWidget" name="GLWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1280</width>
+    <width>640</width>
     <height>960</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>GLCanvas</string>
+   <string>OpenGL Widget</string>
   </property>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
