--- a/TW/TW_Core/camparamdialog.ui
+++ b/TW/TW_Core/camparamdialog.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>932</width>
+    <width>976</width>
     <height>871</height>
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
@@ -68,7 +68,85 @@
      </item>
      <item>
       <layout class="QGridLayout" name="gridLayout">
-       <item row="0" column="0" colspan="2">
+       <item row="3" column="2">
+        <widget class="Line" name="line_2">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="7">
+        <spacer name="horizontalSpacer_3">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="3" column="5">
+        <spacer name="horizontalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="3" column="6">
+        <widget class="QRadioButton" name="radioButton_2">
+         <property name="text">
+          <string>GPU-FFTCC+CPU_ICGN</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="4">
+        <widget class="QRadioButton" name="radioButton">
+         <property name="text">
+          <string>GPU-FFTCC Only</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="10">
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QPushButton" name="OK_pushButton">
+           <property name="text">
+            <string>OK</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="Cancel_pushButton">
+           <property name="text">
+            <string>Cancel</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item row="3" column="0">
+        <widget class="QCheckBox" name="dropFrame_checkBox">
+         <property name="text">
+          <string>Drop Frames if Image Buffer is Full</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0" colspan="10">
         <layout class="QGridLayout" name="statsGridLayout" columnstretch="0,0">
          <item row="0" column="0">
           <widget class="QLabel" name="label_13">
@@ -276,35 +354,20 @@
          </item>
         </layout>
        </item>
-       <item row="2" column="2">
-        <layout class="QHBoxLayout" name="horizontalLayout">
-         <item>
-          <widget class="QPushButton" name="OK_pushButton">
-           <property name="text">
-            <string>OK</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="Cancel_pushButton">
-           <property name="text">
-            <string>Cancel</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </item>
-       <item row="2" column="0">
-        <widget class="QCheckBox" name="dropFrame_checkBox">
-         <property name="text">
-          <string>Drop Frames if Image Buffer is Full</string>
+       <item row="3" column="9">
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
          </property>
-         <property name="checked">
-          <bool>true</bool>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>150</width>
+           <height>20</height>
+          </size>
          </property>
-        </widget>
+        </spacer>
        </item>
-       <item row="0" column="2">
+       <item row="0" column="10">
         <layout class="QGridLayout" name="paramGridLayout">
          <item row="4" column="2">
           <widget class="QLabel" name="label_11">
@@ -323,7 +386,7 @@
          <item row="2" column="1">
           <widget class="QLineEdit" name="SubsetX_lineEdit">
            <property name="text">
-            <string>16</string>
+            <string>10</string>
            </property>
           </widget>
          </item>
@@ -337,14 +400,14 @@
          <item row="5" column="1">
           <widget class="QLineEdit" name="GridY_lineEdit">
            <property name="text">
-            <string>3</string>
+            <string>5</string>
            </property>
           </widget>
          </item>
          <item row="0" column="1">
           <widget class="QLineEdit" name="MarginX_lineEdit">
            <property name="text">
-            <string>10</string>
+            <string>20</string>
            </property>
           </widget>
          </item>
@@ -386,7 +449,7 @@
          <item row="1" column="1">
           <widget class="QLineEdit" name="MarginY_lineEdit">
            <property name="text">
-            <string>10</string>
+            <string>20</string>
            </property>
           </widget>
          </item>
@@ -400,7 +463,7 @@
          <item row="3" column="1">
           <widget class="QLineEdit" name="SubsetY_lineEdit">
            <property name="text">
-            <string>16</string>
+            <string>10</string>
            </property>
           </widget>
          </item>
@@ -421,7 +484,7 @@
          <item row="4" column="1">
           <widget class="QLineEdit" name="GridX_lineEdit">
            <property name="text">
-            <string>3</string>
+            <string>5</string>
            </property>
           </widget>
          </item>
@@ -448,14 +511,34 @@
          </item>
         </layout>
        </item>
-       <item row="2" column="1">
-        <spacer name="horizontalSpacer">
+       <item row="3" column="8">
+        <widget class="QRadioButton" name="radioButton_3">
+         <property name="text">
+          <string>GPU-FFTCC+GPU+ICGN</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1">
+        <spacer name="horizontalSpacer_4">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
          <property name="sizeHint" stdset="0">
           <size>
-           <width>358</width>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="3" column="3">
+        <spacer name="horizontalSpacer_5">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
            <height>20</height>
           </size>
          </property>
