--- a/TW/TW_Core/camparamdialog.ui
+++ b/TW/TW_Core/camparamdialog.ui
@@ -162,13 +162,6 @@
            </property>
           </widget>
          </item>
-         <item row="5" column="2">
-          <widget class="QLabel" name="label_12">
-           <property name="text">
-            <string>pixels</string>
-           </property>
-          </widget>
-         </item>
          <item row="0" column="0">
           <widget class="QLabel" name="label">
            <property name="text">
@@ -183,10 +176,31 @@
            </property>
           </widget>
          </item>
+         <item row="5" column="2">
+          <widget class="QLabel" name="label_12">
+           <property name="text">
+            <string>pixels</string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </item>
        <item>
         <layout class="QVBoxLayout" name="verticalLayout">
+         <item>
+          <widget class="QLabel" name="label_20">
+           <property name="text">
+            <string>Number of POIs to be computed</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="numPOIlabel">
+           <property name="text">
+            <string>0</string>
+           </property>
+          </widget>
+         </item>
          <item>
           <widget class="QLabel" name="label_19">
            <property name="text">
