--- a/TW/TW_Core/camparamdialog.ui
+++ b/TW/TW_Core/camparamdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>844</width>
-    <height>611</height>
+    <height>614</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -15,6 +15,12 @@
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
+  </property>
+  <property name="font">
+   <font>
+    <weight>50</weight>
+    <bold>false</bold>
+   </font>
   </property>
   <property name="windowTitle">
    <string>CamParamDialog</string>
@@ -49,11 +55,14 @@
      </item>
      <item row="0" column="1" colspan="2">
       <layout class="QVBoxLayout" name="verticalLayout_3" stretch="0,0,0">
+       <property name="spacing">
+        <number>20</number>
+       </property>
        <property name="topMargin">
-        <number>30</number>
+        <number>0</number>
        </property>
        <property name="bottomMargin">
-        <number>30</number>
+        <number>20</number>
        </property>
        <item>
         <layout class="QGridLayout" name="gridLayout">
@@ -196,6 +205,14 @@
          </item>
          <item>
           <widget class="QLabel" name="numPOIlabel">
+           <property name="font">
+            <font>
+             <family>SimSun-ExtB</family>
+             <pointsize>10</pointsize>
+             <weight>75</weight>
+             <bold>true</bold>
+            </font>
+           </property>
            <property name="text">
             <string>0</string>
            </property>
