--- a/TW/TW_Core/tw_coremainwindow.qrc
+++ b/TW/TW_Core/tw_coremainwindow.qrc
@@ -1,6 +1,7 @@
 <RCC>
   <qresource prefix="TW_CoreMainWindow">
     <file alias="icons/cam1">Resources/icons/cam1.ico</file>
+    <file alias="icons/video">Resources/icons/video.ico</file>
     <file alias="icons/cam2">Resources/icons/cam2.ico</file>
     <file alias="icons/Cam.ico">Resources/icons/Camera.ico</file>
     <file alias="icons/Open.ico">Resources/icons/Open.ico</file>
