--- a/TW/TW_Core/tw_coremainwindow.ui
+++ b/TW/TW_Core/tw_coremainwindow.ui
@@ -34,6 +34,7 @@
      <string>&amp;File</string>
     </property>
     <addaction name="actionOpen"/>
+    <addaction name="actionLoad_Video"/>
     <addaction name="actionCapture_From_Camra"/>
     <addaction name="actionDoubleCam"/>
     <addaction name="action_Exit"/>
@@ -122,6 +123,7 @@
    <addaction name="actionOpen"/>
    <addaction name="actionCapture_From_Camra"/>
    <addaction name="actionDoubleCam"/>
+   <addaction name="actionLoad_Video"/>
   </widget>
   <action name="actionOpen">
    <property name="enabled">
@@ -257,6 +259,15 @@
   <action name="action_Exit">
    <property name="text">
     <string>&amp;Exit</string>
+   </property>
+  </action>
+  <action name="actionLoad_Video">
+   <property name="icon">
+    <iconset resource="tw_coremainwindow.qrc">
+     <normaloff>:/TW_CoreMainWindow/icons/video</normaloff>:/TW_CoreMainWindow/icons/video</iconset>
+   </property>
+   <property name="text">
+    <string>Load Video...</string>
    </property>
   </action>
  </widget>
